# opengl-path-tracer

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  path_tracer.frag.glsl  screen_quad.vert.glsl
